tests/spec/emit/snapshots/explicit_named_and_comparable_bounds_on_struct.snap
---
source: tests/spec/emit/types.rs
description: |
  
  interface Named {
    fn name() -> string
  }
  
  struct Person {
    value: string,
  }
  
  impl Person {
    fn name(self) -> string {
      self.value
    }
  }
  
  struct Box<T: Named + Comparable> {
    table: Map<T, int>,
  }
  
  fn main() {
    let p = Person { value: "Ada" }
    let _ = p.name()
    let b: Box<Person> = Box { table: Map.new() }
    let _ = b
  }
---
package main

type Named interface {
	name() string
}

type Person struct {
	value string
}

func (p Person) name() string {
	return p.value
}

type Box[T interface {
	Named
	comparable
}] struct {
	table map[T]int
}

func main() {
	p := Person{value: "Ada"}
	p.name()
	b := Box[Person]{table: make(map[Person]int)}
	_ = b
}
