tests/spec/emit/snapshots/explicit_ref_enum_field_no_double_deref.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  enum List<T> {
    Cons(T, Ref<List<T>>),
    Nil,
  }
  
  fn list_len<T>(list: List<T>) -> int {
    match list {
      List.Nil => 0,
      List.Cons(_, rest) => 1 + list_len(rest.*),
    }
  }
---
package main

func MakeListCons[T any](arg0 T, arg1 *List[T]) List[T] {
	return List[T]{Tag: ListCons, Cons0: arg0, Cons1: arg1}
}

func MakeListNil[T any]() List[T] {
	return List[T]{Tag: ListNil}
}

type ListTag uint8

const (
	ListCons ListTag = iota
	ListNil
)

type List[T any] struct {
	Tag   ListTag
	Cons0 T
	Cons1 *List[T]
}

func listLen[T any](list List[T]) int {
	if list.Tag == ListNil {
		return 0
	}
	return 1 + listLen(*list.Cons1)
}
