tests/spec/emit/snapshots/expr_position_assign_preserves_lvalue.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn idx() -> int { let _ = fmt.Println("idx"); 0 }
  fn cond() -> bool { let _ = fmt.Println("cond"); true }
  
  fn main() {
    let mut s = [1]
    let _ = { s[idx()] = if cond() { 2 } else { 3 } }
    let _ = fmt.Println(s[0])
  }
---
package main

import "fmt"

func idx() int {
	fmt.Println("idx")
	return 0
}

func cond() bool {
	fmt.Println("cond")
	return true
}

func main() {
	s := []int{1}
	base := s
	idx_1 := idx()
	var tmp int
	if cond() {
		tmp = 2
	} else {
		tmp = 3
	}
	base[idx_1] = tmp
	fmt.Println(s[0])
}
