tests/spec/emit/snapshots/expr_position_indexed_assign_pins_base_before_call_rhs.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn main() {
    let mut xss = [[10, 11], [20, 21]]
    let mut i = 0
    let bump = || -> int { i += 1; i }
    let _ = if true { xss[i][0] = bump() } else {}
    let _ = xss
  }
---
package main

func main() {
	xss := [][]int{{10, 11}, {20, 21}}
	i := 0
	bump := func() int {
		i++
		return i
	}
	var tmp struct{}
	if true {
		base := xss[i]
		base[0] = bump()
		tmp = struct{}{}
	}
	_ = tmp
	_ = xss
}
