tests/spec/emit/snapshots/field_access_assignment.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  struct Point { x: int, y: int }
  
  fn test() -> int {
    let mut p = Point { x: 1, y: 2 };
    p.x = 100;
    p.x
  }
---
package main

type Point struct {
	x int
	y int
}

func test() int {
	p := Point{
		x: 1,
		y: 2,
	}
	p.x = 100
	return p.x
}
