tests/spec/emit/snapshots/find_result_in_a_let_else_needs_no_subject_temp.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  
  fn main() {
    let nums = [1, 2, 3]
    let Some(even) = nums.find(|n| n % 2 == 0) else { return }
    fmt.Println(even)
  }
---
package main

import "fmt"

func main() {
	nums := []int{1, 2, 3}
	var even int
	found := false
	for _, n := range nums {
		if n%2 == 0 {
			even = n
			found = true
			break
		}
	}
	if !found {
		return
	}
	fmt.Println(even)
}
