tests/spec/emit/snapshots/first_default_variant_keeps_iota.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  enum Colour {
    #[default]
    Red,
    Green,
  }
  
  fn lookup(m: Map<string, Colour>) -> Colour {
    m["a"]
  }
---
package main

func MakeColourRed() Colour {
	return Colour{Tag: ColourRed}
}

func MakeColourGreen() Colour {
	return Colour{Tag: ColourGreen}
}

type ColourTag uint8

const (
	ColourRed ColourTag = iota
	ColourGreen
)

type Colour struct {
	Tag ColourTag
}

func lookup(m map[string]Colour) Colour {
	return m["a"]
}
